<resources>
    <string name="app_name">Image Collection</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="left_thumb">Left Thumb</string>
    <string name="left_index_finger">Left Index Finger</string>
    <string name="left_middle_finger">Left Middle Finger</string>
    <string name="left_ring_finger">Left Ring Finger</string>
    <string name="left_little_finger">Left Little Finger</string>
    <string name="right_thumb">Right Thumb</string>
    <string name="right_index_finger">Right Index Finger</string>
    <string name="right_middle_finger">Right Middle Finger</string>
    <string name="right_ring_finger">Right Ring Finger</string>
    <string name="right_little_finger">Right Little Finger</string>
    <string name="configuration_title">Configuration</string>
    <string name="storage_path_title">Storage Path</string>
    <string name="verify_title">Verify Options</string>
    <string name="verify">0°</string>
    <string name="verify_orthogonal">90°</string>
    <string name="finger_map_title">Finger Map</string>
    <string name="image_collection_title">Image Collection</string>
    <string name="start_title">Start</string>
    <string name="skip_title">Skip</string>
    <string name="cancel_title">Abort</string>
    <string name="lock_pattern_title">Enter device pattern to continue</string>
    <string name="lock_pin">pin</string>
    <string name="lock_password">password</string>
    <string name="lock_password_title">Enter device %s to continue</string>
    <string name="lock_invalid_pattern">Wrong pattern</string>
    <string name="lock_invalid_pin">Wrong PIN</string>
    <string name="lock_invalid_password">Wrong password</string>
    <string name="lock_invalid_token">Token is null, stop Image Collection.</string>
    <string name="collection_start_message">Touch sensor to begin</string>

    <string name="closing_application_alert_title">Closing Application</string>
    <string name="closing_application_alert_positive">OK</string>

    <string name="back_pressed_alert_title">Close Application?</string>
    <string name="back_pressed_alert_message">This will abort ongoing Image Collection. And you need to start from the beginning next time.</string>
    <string name="back_pressed_alert_positive">CLOSE</string>
    <string name="back_pressed_alert_negative">CANCEL</string>

    <string name="cancel_pressed_alert_title">Abort Image Collection?</string>
    <string name="cancel_pressed_alert_message">This will abort ongoing Image Collection. You will need to start from the beginning next time.</string>
    <string name="cancel_pressed_alert_positive">OK</string>
    <string name="cancel_pressed_alert_negative">CANCEL</string>

    <string name="skip_pressed_alert_title">Skip</string>
    <string name="skip_pressed_alert_message">Are you sure you want to skip?</string>
    <string name="skip_pressed_alert_positive">OK</string>
    <string name="skip_pressed_alert_negative">CANCEL</string>

    <string name="max_template_per_user_alert_title">Max template per user</string>
    <string name="max_template_per_user_alert_message">You must delete at least one template to enroll.</string>
    <string name="max_template_per_user_alert_positive">OK</string>

    <string name="enter_pin_or_pattern_alert_title">Enter PIN or pattern</string>
    <string name="enter_pin_or_pattern_alert_message">You must set up PIN or pattern to enroll.</string>
    <string name="enter_pin_or_pattern_alert_positive">OK</string>

    <string name="change_finger_alert_title">Change Finger</string>
    <string name="change_finger_alert_message">Change to %s.</string>
    <string name="change_finger_alert_positive">OK</string>

    <string name="enroll_alert_title">Enroll</string>
    <string name="enroll_alert_success_message">Completed successfully.</string>
    <string name="enroll_alert_failed_message">Failed, Try again or delete finger if it\'s already enrolled.</string>
    <string name="enroll_alert_max_retry_message">Failed %s times, Skip Enroll.</string>
    <string name="enroll_alert_positive">OK</string>

    <string name="enroll_error_timeout">Time limit reached. Try again.</string>
    <string name="enroll_error_generic">Try again or use a different finger.</string>

    <string name="ok">Ok</string>

    <string name="generic_error_title">Error</string>
    <string name="generic_error_message">An error occured: %s</string>

    <string name="operation_complete">Complete</string>

    <string name="select_finger_alert_title">Select Finger</string>
    <string name="select_finger_alert_message">You must select at least one finger.</string>
    <string name="select_finger_alert_positive">OK</string>

    <string name="rotate_finger_alert_title">Rotate Finger</string>
    <string name="rotate_finger_alert_message">Rotate %s 90°.</string>
    <string name="rotate_finger_alert_positive">OK</string>

    <string name="image_collection_completed_alert_title">Image Collection completed</string>
    <string name="image_collection_completed_alert_message">Thanks for sharing your fingerprints.</string>
    <string name="image_collection_completed_alert_positive">OK</string>

    <string name="image_saving_alert_title">Please Wait..</string>
    <string name="image_saving_alert_message">Saving images..</string>

    <string name="error">Error</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="rejected_wrong_id">Rejected (wrong id)</string>
    <string name="acquired">Acquired</string>
    <string name="menu_abort">Abort</string>
    <string name="using_scenario_configuration">Using Scenario Configuration</string>
    <string name="decisionFeedback">Match finger to enrolled finger</string>
    <string name="paused_message">Image Collection paused, press OK to continue.</string>
    <string name="paused">Paused</string>
    <string name="abort">Abort</string>
    <string name="capture_error_canceled"></string>
    <string name="capture_error_acquired_insufficient">Fingerprint Acquired Insufficient</string>
    <string name="capture_error_acquired_too_fast">Finger moved too fast. Please try again.</string>
    <string name="capture_error_hardware_error">Hardware Error</string>
    <string name="capture_error_general_capture">Failed to capture image</string>
    <string name="capture_error_general_identify">Failed to identify</string>
    <string name="capture_error_general_template">Failed to update template</string>
    <string name="capture_error_enroll_failures">Too many failures</string>
    <string name="capture_error_already_enrolled">Already enrolled</string>
    <string name="capture_error_low_sensor_coverage">Rejected - Low Sensor Coverage</string>
    <string name="capture_error_image_too_similar">Image Too Similar - Move Your Finger!</string>
    <string name="capture_error_low_quality">Rejected - Low Quality</string>
    <string name="capture_error_low_mobility">Rejected - Low Mobility</string>
</resources>
