<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_configuration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fpc_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/storage_path_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/storage_path_title"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/storage_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/verify_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:text="@string/verify_title"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="5dp"
                android:paddingStart="5dp">

                <CheckBox
                    android:id="@+id/verify"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:checked="true"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:text="@string/verify"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="5dp"
                android:paddingStart="5dp">

                <CheckBox
                    android:id="@+id/verify_orthogonal"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:checked="false"
                    android:gravity="center_vertical"
                    android:text="@string/verify_orthogonal"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="40dp"
                android:paddingStart="40dp">

                <NumberPicker
                    android:id="@+id/verify_count"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:descendantFocusability="blocksDescendants" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="40dp"
                android:paddingStart="40dp">

                <NumberPicker
                    android:id="@+id/verify_orthogonal_count"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:descendantFocusability="blocksDescendants" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/decisionFeedback"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:checked="false"
                android:gravity="center_vertical"
                android:text="@string/decisionFeedback"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/fingermap_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/finger_map_title"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/finger_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/left_hand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_lefthand" />

                <ImageView
                    android:id="@+id/finger_invisible_l"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_target_invisible_l" />

                <ImageView
                    android:id="@+id/finger_select_l5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_target_select_l5" />

                <ImageView
                    android:id="@+id/finger_select_l4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_target_select_l4" />

                <ImageView
                    android:id="@+id/finger_select_l3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_target_select_l3" />

                <ImageView
                    android:id="@+id/finger_select_l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_target_select_l2" />

                <ImageView
                    android:id="@+id/finger_select_l1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_target_select_l1" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/right_hand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_righthand" />

                <ImageView
                    android:id="@+id/finger_invisible_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_target_invisible_r" />

                <ImageView
                    android:id="@+id/finger_select_r1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_target_select_r1" />

                <ImageView
                    android:id="@+id/finger_select_r2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_target_select_r2" />

                <ImageView
                    android:id="@+id/finger_select_r3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_target_select_r3" />

                <ImageView
                    android:id="@+id/finger_select_r4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_target_select_r4" />

                <ImageView
                    android:id="@+id/finger_select_r5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/fpc_target_select_r5" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
